--- a/mysql-cdc-hudi/mysql-cdc-dms.yaml
+++ b/mysql-cdc-hudi/mysql-cdc-dms.yaml
@@ -88,6 +88,7 @@ Resources:
   ReplicationInstance:
     Type: AWS::DMS::ReplicationInstance
     Properties:
+      EngineVersion: 3.4.7
       AllocatedStorage: !Ref ReplicationInstanceAllocatedStorage
       AllowMajorVersionUpgrade: false
       AutoMinorVersionUpgrade: false
