--- a/mysql-cdc-hudi/cfn-templates/mysql-cdc-rds-mysql.yaml
+++ b/mysql-cdc-hudi/cfn-templates/mysql-cdc-rds-mysql.yaml
@@ -67,6 +67,10 @@ Parameters:
     Description: Ec2 Keyname
     Type: String
     Default: aksh-mumbai
+  KinesisVPCEndpointSG:
+    Description: >
+      Security Group configured in VPC Endpoint for Kinesis.
+    Type: String
 Resources:
   RDSDBSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -145,6 +149,7 @@ Resources:
       PubliclyAccessible: true
       VPCSecurityGroups:
         - !Ref RDSDBSecurityGroup
+        - !Ref KinesisVPCEndpointSG
       Tags:
         - Key: Name
           Value: !Sub '${AWS::StackName}-mysql'
@@ -161,6 +166,7 @@ Resources:
       SubnetId: !Ref MySQlSubnetA
       SecurityGroupIds:
         - !Ref RDSDBSecurityGroup
+        - !Ref KinesisVPCEndpointSG
       UserData:
         Fn::Base64: !Sub |
           Content-Type: multipart/mixed; boundary="//"
@@ -199,6 +205,17 @@ Resources:
           Key: Name
           Value: DMSLabEC2
 
+  #This is a Secret resource with a randomly generated password in its SecretString JSON.
+  RDSPasswordSecret:
+    Type: 'AWS::SecretsManager::Secret'
+    Properties:
+      Name: !Ref DBInstanceID
+      Description: "This secret has RDS secret password."
+      SecretString: !Sub '{"username":"${DBUsername}","password":"${DBPassword}"}'
+      Tags:
+        -
+          Key: DB
+          Value: !Ref DBInstanceID
 Outputs:
   MySQLEndpointName:
     Description: MySQL endpoint address
