--- a/mysql-cdc-hudi/cfn-templates/mysql-cdc-dms.yaml
+++ b/mysql-cdc-hudi/cfn-templates/mysql-cdc-dms.yaml
@@ -152,3 +152,6 @@ Outputs:
   DMSSecurityGroup:
     Description: DMSSecurityGroup
     Value: !Ref DMSSecurityGroup
+  ReplicationTaskArn:
+    Description: DMSReplicationTask
+    Value: !Ref DMSReplicationTask
